--- a/src/Raven.Studio/wwwroot/index.html
+++ b/src/Raven.Studio/wwwroot/index.html
@@ -98,6 +98,8 @@
         <script type="text/javascript" src="lib/qrcode.js/qrcode.js"></script>
         <script type="text/javascript" src="lib/css-escape/css.escape.js"></script>
         <script type="text/javascript" src="lib/favico.js/favico.js"></script>
+        <script type="text/javascript" src="lib/leaflet/dist/leaflet.js"></script>
+    
     <!-- /build -->
 
     <script data-main="App/main"></script>
